[package]
name = "dff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
glob = "0.3.1"
indicatif = { version = "0.17.7", features = ["improved_unicode"] }
md-5 = "0.10.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
walkdir = "2.4.0"
